--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "jstart",
   "version": "0.0.1",
   "description": "A CLI application for automating the setup of new JavaScript projects.",
-  "main": "src/app.js",
+  "main": "dist/app.js",
+  "bin": "dist/app.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/app.js",
+    "dev": "tsx src/app.ts",
+    "dev:watch": "tsx watch src/app.ts",
+    "build": "tsc",
+    "build:watch": "tsc -w",
     "test": "vitest"
   },
   "keywords": [
@@ -17,15 +21,22 @@
   "license": "MIT",
   "packageManager": "pnpm@9.3.0+sha512.ee7b93e0c2bd11409c6424f92b866f31d3ea1bef5fbe47d3c7500cdc3c9668833d2e55681ad66df5b640c61fa9dc25d546efa54d76d7f8bf54b13614ac293631",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.0.1",
+    "@typescript-eslint/parser": "^8.0.1",
     "eslint": "8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "nodemon": "^3.1.4",
     "prettier": "3.3.2",
     "standard": "^17.1.0",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.17.0",
+    "typescript": "^5.5.4",
     "vitest": "^2.0.1"
   },
   "dependencies": {
+    "@inquirer/prompts": "^5.3.8",
+    "chalk": "^5.3.0",
     "commander": "^12.1.0"
   }
 }
