--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "bin": "dist/app.js",
   "type": "module",
   "scripts": {
+    "prepare": "npm run build",
     "dev": "tsx src/app.ts",
     "dev:watch": "tsx watch src/app.ts",
     "build": "tsc",
     "build:watch": "tsc -w",
-    "test": "vitest"
+    "test": "vitest",
+    "start": "node dist/app.js"
   },
   "keywords": [
     "template",
@@ -26,10 +28,8 @@
     "eslint": "8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "nodemon": "^3.1.4",
     "prettier": "3.3.2",
     "standard": "^17.1.0",
-    "ts-node": "^10.9.2",
     "tsx": "^4.17.0",
     "typescript": "^5.5.4",
     "vitest": "^2.0.1"
